--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "expo-linear-gradient": "~14.0.1",
     "expo-localization": "^16.0.0",
     "expo-location": "~18.0.4",
+    "expo-router": "^4.0.14",
     "expo-status-bar": "~2.0.0",
     "i18next": "^24.2.0",
     "i18next-http-backend": "^3.0.1",
     "react": "18.3.1",
     "react-i18next": "^15.2.0",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
