--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
-    "@rnmapbox/maps": "^10.1.33",
     "axios": "^1.7.9",
     "axios-debug-log": "^1.0.0",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~52.0.20",
     "expo-linear-gradient": "~14.0.1",
     "expo-localization": "^16.0.0",
@@ -26,13 +26,15 @@
     "expo-status-bar": "~2.0.0",
     "i18next": "^24.2.0",
     "i18next-http-backend": "^3.0.1",
+    "prop-types": "^15.8.1",
     "react": "18.3.1",
     "react-i18next": "^15.2.0",
     "react-native": "0.76.5",
     "react-native-autocomplete-input": "^5.5.2",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "^1.20.1",
-    "react-native-reanimated": "~3.16.1"
+    "react-native-maps": "^1.18.0",
+    "react-native-reanimated": "~3.16.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
