--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-maps": "^1.18.0",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-reanimated": "~3.16.1",
+    "react-native-webview": "^13.13.1",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
